# Job_Posting_Parser

./: .gitignore  Config Scheme.vpp  Database Scheme.vpp  README.md  config.json  config.toml  config_handler.py  const.py  database_handler.py  djinni_parser.py  email_handler.py  html_parser.py  job_parser.py  job_posting_parser.py  job_posting_parser_2.py  parsers.py  pyproject.toml  requirements.txt  settings.json  telegram_handler.py  utils.py  vacancies.db  vacancies.xlsx
Stratches/: vacancy_web_update_from_backup.sql
configs/: config.json  config.py
