[project]
name = "job_posting_parser"
version = "0.1.0"
description = ""
authors = [
    {name = "Common",email = "shypulin@ukr.net"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiohttp (>=3.13.3,<4.0.0)",
    "telethon (>=1.42.0,<2.0.0)",
    "cryptg (>=0.5.2,<0.6.0)",
    "sqlalchemy (>=2.0)",
    "beautifulsoup4 (>=4.14.3,<5.0.0)",
    "lxml (>=6.0.2,<7.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "python-dateutil (>=2.9.0.post0,<3.0.0)",
    "imapclient (>=3.1.0,<4.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "pandas (>=3.0.0,<4.0.0)",
    "pylint (>=4.0.4,<5.0.0)",
    "mypy (>=1.19.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

#----- PyLint config -----

[tool.pylint.format]
max-line-length = 120

#----- MyPy config -----

[[tool.mypy.overrides]]
module = "telethon.*"
ignore_missing_imports = true