[project]
name = "job_posting_parser"
version = "0.1.0"
description = ""
authors = [
    {name = "Common",email = "shypulin@ukr.net"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiohttp (>=3.13.3,<4.0.0)",
    "telethon (>=1.42.0,<2.0.0)",
    "cryptg (>=0.5.2,<0.6.0)",
    "sqlalchemy (>=2.0)",
    "beautifulsoup4 (>=4.14.3,<5.0.0)",
    "lxml (>=6.0.2,<7.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "python-dateutil (>=2.9.0.post0,<3.0.0)",
    "imapclient (>=3.1.0,<4.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "pandas (>=3.0.0,<4.0.0)",
    "pylint (>=4.0.4,<5.0.0)",
    "mypy (>=1.19.1,<2.0.0)",
    "radon (>=6.0.1,<7.0.0)",
    "lxml-stubs (>=0.5.1,<0.6.0)",
    "pandas-stubs (>=2.3.3.260113,<3.0.0.0)",
    "types-greenlet (>=3.3.0.20251206,<4.0.0.0)",
    "types-html5lib (>=1.1.11.20251117,<2.0.0.0)",
    "types-python-dateutil (>=2.9.0.20260124,<3.0.0.0)",
    "types-tqdm (>=4.67.0.20250809,<5.0.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

#----- PyLint config -----

[tool.pylint.basic]
# Разрешаем TypeVar именовать в стиле CamelCase с длинными именами
typevar-rgx = "^[A-Z][a-zA-Z0-9]+$"

[tool.pylint.format]
max-line-length = 120

#----- MyPy config -----

[tool.mypy]
# Указываем MyPy использовать плагин Pydantic для корректной проверки моделей
plugins = ["pydantic.mypy"]

# Настройки для плагина Pydantic
[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

# Базовые настройки строгости
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true  # Проверять тела функций без аннотаций типов

# Игнорируем библиотеки без файлов типов (Stubs)
[[tool.mypy.overrides]]
module = [
    "telethon.*",
    "imapclient.*",
    "aiohttp.*"  # Иногда тоже может капризничать без типов
]
ignore_missing_imports = true
